release: prepare v1.1.2
